# lightly-train

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  ade20k_classes.py  debug.py  debug_map.py  debug_test.py  dinov2_dummy.py  dinov3_eomt_semantic_segmentation_forward_notes.md  dummy.py  launch_dinov2.sh  launch_train_dinov2_reproduction.sh  launch_train_dinov2_reproduction_dino_only.sh  nbsphinx_integration_plan.md  pyproject.toml  train.py  train_ade20k_segmentation.py  train_dinov2_reproduction.py  wandb_utils.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_improvement.md  feature_request.md  question.md  setup_help.md
.github/workflows/: check_code_format.yml  test_build.yml  test_documentation.yml  test_unit.yml  (+1 more)
deploy/lightlytrain-deploy-py/: README.md  pyproject.toml
deploy/lightlytrain-deploy-py/src/lightlytrain_deploy_py/: __init__.py  ltdetr_object_detection.py  pre_post_processing.py
dev_tools/: depth_anything_3_licenseheader.tmpl  dinov2_licenseheader.tmpl  dinov3_licenseheader.tmpl  fastvit_licenseheader.tmpl  huggingface_licenseheader.tmpl  nvidia_open_model_licenseheader.tmpl  nvidia_radio_licenseheader.tmpl  pytorch_lightning_licenseheader.tmpl
docker/: Dockerfile-amd64-cuda  Makefile
docs/: Makefile  prebuild.py
docs/source/: conf.py  (+20 more)
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/cmake/: FindTensorRT.cmake
examples/cpp/common/: detection_utils.hpp
examples/cpp/onnxruntime/: CMakeLists.txt  main.cpp
examples/cpp/tensorrt/: CMakeLists.txt  main.cpp
inference_benchmarks/: Makefile  README.md  analyze_tensorrt_resolution_pareto.py  run_tensorrt_benchmark.py  run_tensorrt_resolution_benchmark.py
licences/: FASTVIT_LICENSE  LINGBOT_VISION_LICENSE
scripts/: run_benchmark.py
templates/: train_object_detection.jinja2
tests/: conftest.py  helpers.py  test__checkpoint.py  test__cli.py  test__env.py  test__logging.py  test__torch_compile.py  test__torch_helpers.py  test__training_step_timer.py
(+790 files in other folders)
