[project]
name = "lightlytrain-deploy-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lionel", email = "lionel@lightly.ai" }
]
requires-python = ">=3.8, <3.14"
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime",
]
gpu = [
    "onnxruntime-gpu",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
